<resources>
    <string name="app_name">Smart Can</string>
    <string name="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since</string>
    <string name="text_single">Lorem Ipsum is simply dummy text of the printing anLorem Ipsum has </string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="name_empty">Name is empty</string>
    <string name="mail_empty">Mail Id is empty</string>
    <string name="invalid_email">Mail Id is invalid</string>
    <string name="phone_empty">Phone is empty</string>
    <string name="agent_empty">Agent Id is empty</string>


    <string name="loading">Loading...</string>



    <string name="order_status_msg1">Order Place</string>
    <string name="order_status_msg2">We have received your order.</string>
    <string name="order_status_msg3">Order Process</string>
    <string name="order_status_msg4">Your order has been confirmed.</string>
    <string name="order_status_msg5">Order Packed</string>
    <string name="order_status_msg6">Ready to dispatch.</string>
    <string name="order_status_msg7">Order Shipped</string>
    <string name="order_status_msg8">Material loaded for shipping.</string>
    <string name="order_status_msg9">Reached Final Destination</string>
    <string name="order_status_msg10">Material reached final destination.</string>



</resources>
