<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="ORDER ID"
                    />


                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:gravity="end"
                    android:text="ABCD123"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <View
                        android:id="@+id/view10"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle_green"
                        />

                    <View
                        android:id="@+id/view11"
                        android:layout_width="4dp"
                        android:layout_height="60dp"
                        android:background="@color/status_green"
                        android:layout_marginTop="5dp"
                        />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/shopping_bag"
                        />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/tv_status_name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/order_status_msg1"
                            />


                        <TextView
                            android:id="@+id/tv_status_msg1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:layout_below="@+id/tv_status_name1"
                            android:textSize="12sp"
                            android:text="@string/order_status_msg2"
                            />


                    </RelativeLayout>



                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <View
                        android:id="@+id/view20"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle_green"
                        />

                    <View
                        android:id="@+id/view21"
                        android:layout_width="4dp"
                        android:layout_height="60dp"
                        android:background="@color/status_green"
                        android:layout_marginTop="5dp"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/new_order"
                        />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/tv_status_name2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/order_status_msg3"
                            />


                        <TextView
                            android:id="@+id/tv_status_msg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:layout_below="@+id/tv_status_name2"
                            android:textSize="12sp"
                            android:text="@string/order_status_msg4"
                            />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <View
                        android:id="@+id/view30"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle_green"
                        />

                    <View
                        android:id="@+id/view31"
                        android:layout_width="4dp"
                        android:layout_height="60dp"
                        android:background="@color/status_green"
                        android:layout_marginTop="5dp"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/order_packed"
                        />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/tv_status_name3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/order_status_msg5"
                            />


                        <TextView
                            android:id="@+id/tv_status_msg3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:layout_below="@+id/tv_status_name3"
                            android:textSize="12sp"
                            android:text="@string/order_status_msg6"
                            />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <View
                        android:id="@+id/view40"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle_green"
                        />

                    <View
                        android:id="@+id/view41"
                        android:layout_width="4dp"
                        android:layout_height="60dp"
                        android:background="@color/status_green"
                        android:layout_marginTop="5dp"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/order_shipped"
                        />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/tv_status_name4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/order_status_msg7"
                            />


                        <TextView
                            android:id="@+id/tv_status_msg4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:layout_below="@+id/tv_status_name4"
                            android:textSize="12sp"
                            android:text="@string/order_status_msg8"
                            />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    >

                    <View
                        android:id="@+id/view50"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle_green"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/order_delivered"
                        />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/tv_status_name5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/order_status_msg9"
                            />


                        <TextView
                            android:id="@+id/tv_status_msg5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:layout_below="@+id/tv_status_name5"
                            android:textSize="12sp"
                            android:text="@string/order_status_msg10"
                            />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>






            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_blue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    >

                    <TextView
                        android:id="@+id/msg1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOrange"
                        android:textStyle="bold"
                        android:text="Your order packed "
                        />

                    <TextView
                        android:id="@+id/msg2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="&amp; ready to dispatch"
                        />


                </LinearLayout>


            </RelativeLayout>



        </LinearLayout>

    </ScrollView>




</LinearLayout>